# molescan-backend

./: .env.example  .gitignore  Dockerfile  README.md  __notebook_source__.ipynb  classifier.py  main.py  pyproject.toml
app/api/: __init__.py
app/api/routes/: __init__.py  health.py  predict.py
app/core/: config.py
app/models/: classifier.py  tta.py
app/schemas/: prediction.py
training/: README.md  train_isic.py
training/results/: final_metrics.json  training_history.json
